[feat] add upload api to add new image to mysql
